--- a/package.json
+++ b/package.json
@@ -1,8 +1,21 @@
 {
-  "name": "skill-graph",
+  "name": "skill-graph-react",
+  "private": true,
   "version": "1.0.0",
-  "description": "Interactive Skill Graph Visualization",
+  "type": "module",
   "scripts": {
-    "start": "npx serve -p 3000"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "cytoscape": "^3.30.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.4.1",
+    "vite": "^5.4.19"
   }
 }
